--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "browser-router": "^0.2.0",
+    "lodash": "^4.17.5",
     "material-ui": "^1.0.0-beta.38",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.1",
