--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "axios": "^0.18.0",
     "browser-router": "^0.2.0",
     "lodash": "^4.17.5",
-    "material-ui": "^1.0.0-beta.38",
+    "material-ui": "^1.0.0-beta.40",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.2.0",
     "react-fontawesome": "^1.6.1",
+    "react-materialize": "^2.1.4",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.1"
+    "react-scripts": "1.1.1",
+    "react-swipeable-views": "^0.12.13"
   },
   "scripts": {
     "start": "react-scripts start",
