--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "react-fontawesome": "^1.6.1",
     "react-materialize": "^2.1.4",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.1",
-    "react-swipeable-views": "^0.12.13"
+    "react-scripts": "1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
