--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-materialize": "^2.1.4",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
+    "react-slick": "^0.23.1",
     "react-star-rating-component": "^1.4.1"
   },
   "scripts": {
