--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^16.3.1",
     "react-fontawesome": "^1.6.1",
     "react-materialize": "^2.1.4",
+    "react-modal": "^3.3.2",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "react-slick": "^0.23.1",
